creating user story for pinned and unpinned post

--- a/src/main/resources/templates/errors/404.html
+++ b/src/main/resources/templates/errors/404.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Not Found</title>
 </head>
 <body>
-$END$
+<h1>404</h1>
+<h3 th:text="${error_message}"></h3>
 </body>
 </html>
