--- a/src/main/resources/templates/fragments/copyright.html
+++ b/src/main/resources/templates/fragments/copyright.html
@@ -2,7 +2,7 @@
 <div th:fragment="copyright">
     <footer>
         <div class="container">
-            <p>Dobble Copyright &copy; 2015, All Rights Reserved</p>
+            <p>Nazim Uddin Asif, All Rights Reserved</p>
         </div>
     </footer>
 </div>
