--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,8 +20,15 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a th:href="@{/}">Home</a></li>
+                <li><a th:href="@{/}">Home</a></li>
                 <li><a th:href="@{/profiles/status}">Profile</a></li>
+                <li>
+                    <div class="navbar-text navbar-right">
+                        <form th:action="@{/logout}" method="post">
+                            <input type="submit" value="Logout"/>
+                        </form>
+                    </div>
+                </li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
