--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,152 +1,202 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:th="http://www.thymeleaf.org">
 
 
-  <div th:replace="fragments/header:: header"/>
+<div th:replace="fragments/header:: header"/>
 
-  <body>
+<body>
 
-    <nav class="navbar navbar-default">
-      <div class="container">
+<nav class="navbar navbar-default">
+    <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-              <li class="active"><a th:href="@{/}">Home</a></li>
-              <li><a th:href="@{/profiles/status}">Profile</a></li>
-          </ul>
+            <ul class="nav navbar-nav">
+                <li ><a th:href="@{/}">Home</a></li>
+                <li><a th:href="@{/profiles/status}">Profile</a></li>
+                <li>
+                <div class="navbar-text navbar-right">
+                    <form th:action="@{/logout}" method="post">
+                        <input type="submit" value="Logout"/>
+                    </form>
+                </div>
+                </li>
+            </ul>
         </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+    </div>
+</nav>
 
-    <section>
-      <div class="container">
+<section>
+    <div class="container">
         <div class="row">
-          <div class="col-md-8">
-            <div class="profile">
-              <div class="row">
+            <div class="col-md-8">
+                <div class="profile">
+                    <div class="row">
+                        <div th:if="${errorMessage}">
+                            <div th:text="${errorMessage}"></div>
+                        </div>
+                        <div class="col-md-8">
+                            <ul>
+                                <li><strong>First Name:</strong> <span th:text="${user.firstName}"></span></li>
+                                <li><strong>Last Name:</strong> <span th:text="${user.lastName}"></span></li>
+                                <li><strong>Email Address: </strong> <span th:text="${user.email}"></span></li>
 
-                <div class="col-md-8">
-                  <ul>
-                    <li><strong>First Name:</strong> <span th:text="${user.firstName}"></span></li>
-                    <li><strong>Last Name:</strong> <span th:text="${user.lastName}"></span></li>
-                    <li><strong>Email Address: </strong> <span th:text="${user.email}"></span></li>
+                            </ul>
 
-                  </ul>
-
-                </div>
-              </div>
-              <br></br>
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="panel panel-default">
-              <div class="panel-heading">
-                <h3 class="panel-title">Profile Wall</h3>
-              </div>
-              <div class="panel-body">
-                <form th:action="@{/profiles/save}"
-                      th:object="${status}" method="POST">
-                  <div class="form-group">
-                    <textarea class="form-control" th:field="*{content}" placeholder="Write on the wall"></textarea>
-                  </div>
-
-                  <div class="pull-right">
-<!--                    <div class="dropdown">-->
-<!--                      <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Tutorials-->
-<!--                        <span class="caret"></span></button>-->
-<!--                      <ul class="dropdown-menu">-->
-<!--                        <li class="dropdown-header">Dropdown header 1</li>-->
-<!--                        <li><a href="#">HTML</a></li>-->
-<!--                        <li><a href="#">CSS</a></li>-->
-<!--                        <li><a href="#">JavaScript</a></li>-->
-<!--                      </ul>-->
-<!--                    </div>-->
-                    <div class="btn-group">
-                      <label class="radio-inline">
-                        <input type="radio" name="optradio" th:field="*{isPrivate}" value="1">Private</label>
-                      <label class="radio-inline">
-                        <input type="radio" name="optradio" th:field="*{isPrivate}" value="0" >Public</label>
-                  </div>
-
-
-                  <div class="form-group mb-4 col-4">
-                    <select type="text" th:field ="*{location.id}"  class="form-control">
-                      <option value="-1">choose..</option>
-                      <option th:each="location: ${locations}"
-                              th:value="${location.id}"
-                              th:text="${location.name}"></option>
-                    </select>
-                  </div>
-                  </div>
-                  <button type="submit" class="btn btn-default">Submit</button>
-                </form>        
-              </div>
-            </div>
-                </div>
-              </div>
-            </div>
-          </div><!-- col-md-8 end -->
-
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8">
-            <div class="profile">
-
-              <br></br>
-            </div>
-          </div><!-- col-md-8 end -->
-
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8">
-            <div class="profile">
-
-              <br></br>
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="panel panel-default">
-                    <div class="panel-heading">
-                      <h3 class="panel-title">Posts</h3>
+                        </div>
                     </div>
-                    <span class="tr-shadow" th:each="status :${myStatuses}">
+                    <br></br>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">Profile Wall</h3>
+                                </div>
+                                <div class="panel-body">
+                                    <form th:action="@{/profiles/save}"
+                                          th:object="${status}" method="POST">
+                                        <div class="form-group">
+                                            <textarea class="form-control" th:field="*{content}"
+                                                      placeholder="Write on the wall"></textarea>
+                                        </div>
+
+                                        <div class="pull-right">
+
+                                            <div class="btn-group">
+                                                <label class="radio-inline">
+                                                    <input type="radio" name="optradio" th:field="*{isPrivate}"
+                                                           value="1">Private</label>
+                                                <label class="radio-inline">
+                                                    <input type="radio" name="optradio" th:field="*{isPrivate}"
+                                                           value="0">Public</label>
+                                            </div>
+
+
+                                            <div class="form-group mb-4 col-4">
+                                                <select type="text" th:field="*{location.id}" class="form-control">
+                                                    <option value="---">choose..</option>
+                                                    <option th:each="location: ${locations}"
+                                                            th:value="${location.id}"
+                                                            th:text="${location.name}"></option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <button type="submit" class="btn btn-default">Submit</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- col-md-8 end -->
+
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="profile">
+
+                    <br></br>
+                </div>
+            </div><!-- col-md-8 end -->
+
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="profile">
+
+                    <br></br>
+
+                    <div th:if="${pinnedPost}">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="panel panel-default">
+                                    <div class="panel-heading">
+                                        <h3 class="panel-title">Pinned Posts</h3>
+                                    </div>
+                                    <span class="tr-shadow" th:each="status :${myPinnedPost}">
                                 <div class="panel-body">
                                     <div class="col-md-8">
                                         <ul>
-                                          <li><strong>Name:</strong> <span th:text="${status.user.firstName} "></span> <span th:text="${status.user.lastName}"></span></li>
+                                          <li><strong>Name:</strong> <span
+                                                  th:text="${status.user.firstName} "></span> <span
+                                                  th:text="${status.user.lastName}"></span></li>
                                             <li><strong>Status: </strong><span th:text="${status.content}"></span></li>
-                                            <li><strong>Location: </strong><span th:text="${status.location.name}"></span></li>
+                                            <li><strong>Location: </strong><span
+                                                    th:text="${status.location.name}"></span></li>
                                         </ul>
-                                      <br>
+                                        <ul class="nav navbar-nav">
+                                            <li class="active"><a th:href="@{/profiles/update(statusId=${status.id})}">Edit</a></li>
+                                         </ul>
+                                        <ul class="nav navbar-nav">
+                                            <li class="active"><a th:href="@{/profiles/unPinned(statusId=${status.id})}">UnPinned</a></li>
+                                         </ul>
+                                        <br>
 
                                     </div>
                                 </div>
                                 </span>
-                  </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">Posts</h3>
+                                </div>
+                                <span class="tr-shadow" th:each="status :${myStatuses}">
+                                <div class="panel-body">
+                                    <div class="col-md-8">
+                                        <ul>
+                                          <li><strong>Name:</strong> <span
+                                                  th:text="${status.user.firstName} "></span> <span
+                                                  th:text="${status.user.lastName}"></span></li>
+                                            <li><strong>Status: </strong><span th:text="${status.content}"></span></li>
+                                            <li><strong>Location: </strong><span
+                                                    th:text="${status.location.name}"></span></li>
+                                        </ul>
+                                        <ul class="nav navbar-nav">
+                                            <li class="active"><a th:href="@{/profiles/update(statusId=${status.id})}">Edit</a></li>
+                                         </ul>
+                                        <ul class="nav navbar-nav">
+                                            <li class="active"><a th:href="@{/profiles/pinned(statusId=${status.id})}">Pinned</a></li>
+                                         </ul>
+                                        <br>
+
+                                    </div>
+                                </div>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-            </div>
-          </div><!-- col-md-8 end -->
+            </div><!-- col-md-8 end -->
 
         </div>
-      </div>
-    </section>
+    </div>
+</section>
 
 
-    <div th:replace="fragments/copyright:: copyright"/>
+<div th:replace="fragments/copyright:: copyright"/>
 
-    <div th:replace="fragments/footer:: footer"/>
-  </body>
+<div th:replace="fragments/footer:: footer"/>
+</body>
 </html>
