--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,7 +9,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Dobble Social Network</title>
+        <title>Social Network</title>
 
         <!-- Bootstrap core CSS -->
         <!--    <link href="css/bootstrap.css" rel="stylesheet">-->
